fix(react-sortable-dashboard-example): added gaps for widgets

--- a/packages/react-sortable-dashboard-example/components/main/main.module.css
+++ b/packages/react-sortable-dashboard-example/components/main/main.module.css
@@ -3,5 +3,5 @@
     grid-auto-flow: column;
     grid-template-columns: 318px 1fr;
     margin-top: 14px;
-    gap: 52px;
+    gap: 24px;
 }
